# python-loading-animation

./: README.md  pyproject.toml
demo/: demo.py
src/loading_animation/: __init__.py  animation.py
