[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-loading-animation"
version = "0.1.0"
description = "A dynamic, thread-based loading animation for CLI"
readme = "README.md"
authors = [{ name="Enzo Araujo", email="enzo@strikerinvest.com" }]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]